--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start -p 5000",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "echo \"Warning: no test specified\" && exit 0"
   },
   "dependencies": {
     "@types/node": "18.11.9",
