--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "nextjs",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 5000",
-    "build": "next build",
-    "start": "next start -p 5000",
-    "lint": "next lint",
-    "test": "echo \"Warning: no test specified\" && exit 0"
-  },
-  "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.2",
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.8.4",
-    "ui": "*"
-  }
+	"name": "nextjs",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev -p 5000",
+		"build": "next build",
+		"start": "next start -p 5000",
+		"lint": "next lint",
+		"test": "echo \"Warning: no test specified\" && exit 0"
+	},
+	"dependencies": {
+		"@types/node": "18.11.9",
+		"@types/react": "18.0.25",
+		"@types/react-dom": "18.0.8",
+		"eslint": "8.27.0",
+		"eslint-config-next": "13.0.2",
+		"next": "13.0.2",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"typescript": "4.8.4",
+		"base-elements": "*"
+	}
 }
