feat: add trpc, migrate db with multiple postgres db support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"typescript.preferences.importModuleSpecifier": "non-relative",
 	"typescript.tsdk": "node_modules/typescript/lib",
+	"eslint.workingDirectories": ["./apps/t3"],
 	"search.exclude": {
 		"**/.git": true,
 		"**/node_modules": true,
