--- a/apps/t3/.env.example
+++ b/apps/t3/.env.example
@@ -7,4 +7,5 @@
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
 # Prisma
-DATABASE_URL=file:./db.sqlite
+DATABASE_URL=postgresql://db_user:db_pass@localhost:5432/t3
+
