--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./configs/postgres:/docker-entrypoint-initdb.d
       - postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_MULTIPLE_DATABASES: service_database, strapi, t3
+      POSTGRES_MULTIPLE_DATABASES: service_database, strapi, t3, remix
       POSTGRES_USER: db_user
       POSTGRES_PASSWORD: db_pass
     networks:
